# numlib

./: .gitignore  CMakeLists.txt  README.md
include/numlib/: array_ptr.hh  base.hh  convolve.hh
tests/: base_test.cc  convolve_test.cc
